add some validation error for duplicate email and phone number

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <form action="" method="post">
+    <form action="" method="post" novalidate>
         {% csrf_token %}
         {{ form.as_p}}
-        <input type="submit"  value="register">
+        <input type="submit"  value="register" >
     </form>
 
 {% endblock %}
