--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block extra_header %}
+    <link rel="stylesheet" href="{% static 'home/css/style_of_asal.css' %}">
+{% endblock %}
 
 {% block content %}
     <h3>hello asal</h3>
