--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -3,6 +3,9 @@
         <div class="navbar-nav">
             <a class="nav-link active" href="{% url 'home:home' %}">Home</a>
             <a class="nav-link active" href="{% url 'accounts:user_register' %}">register</a>
+            {% if request.user.is_admin %}
+                <a class="nav-link active" href="{% url 'home:bucket' %}">bucket</a>
+            {% endif %}
         </div>
     </div>
 </nav>
